# stim

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.md  flavor.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sidecar.toml  sidecars.toml  stim-guard.json
.github/workflows/: ci.yml  guard.yml
apps/agents/: Cargo.toml
apps/agents/src/: app.rs  handler.rs  lib.rs  main.rs  openapi.rs  schema.rs  stim_server.rs
apps/agents/src/state/: config.rs  mod.rs  model.rs  probe.rs  process.rs
apps/agents/tests/: http_api.rs  state.rs  stim_server.rs
apps/agents/tests/http_cases/: lifecycle.rs  mod.rs  profiles.rs  routes.rs  support.rs
apps/controller/: Cargo.toml  README.md
apps/controller/src/: config.rs  controller.rs  fetch.rs  lib.rs  main.rs  runtime.rs  service.rs
apps/controller/src/client/: mod.rs  santi_delivery.rs  santi_model.rs  santi_reply.rs  santi_transcript.rs  stim_server_chat.rs  stim_server_facade.rs  stim_server_registry.rs
apps/controller/src/controller/: carrier.rs  facade.rs  fixtures.rs  messages.rs  reply.rs  runtime.rs  tests.rs  types.rs
apps/controller/src/factory/: discovery.rs  messages.rs  mod.rs
apps/controller/src/handler/: conversations.rs  discovery.rs  health.rs  mod.rs  operation_socket.rs  roundtrip.rs  routes.rs
apps/controller/src/model/: api.rs  mod.rs  roundtrip.rs  state.rs
apps/controller/src/runtime/: mod.rs  sidecar.rs  tests.rs
apps/controller/src/service/: acceptance.rs  clock.rs  mod.rs  operation_events.rs  operation_flow.rs  operation_product.rs  operation_refs.rs  operation_snapshot.rs  operation_stream.rs  operation_target.rs  operations.rs  roundtrip.rs  roundtrip_tests.rs  routes.rs  runtime.rs  targets.rs  tests.rs  transcript.rs  types.rs
apps/controller/src/service/acceptance/: operation.rs
apps/controller/tests/: runtime_cases.rs  service_roundtrip_root.rs
apps/controller/tests/runtime_cases/: fetch.rs  http.rs  mod.rs  sidecar.rs  status.rs  support.rs  ws.rs
apps/controller/tests/service_cases/: roundtrip.rs
apps/packaged/: Cargo.toml
apps/packaged/src/: bridge.rs  cli.rs  clock.rs  launch.rs  main.rs  plan.rs  runner.rs
apps/packaged/tests/: plan.rs
apps/renderer/: Cargo.toml  package.json  vite.config.ts
apps/renderer/src/: App.vue  main.rs  main.ts
apps/renderer/src/components/: MessageCard.vue
apps/renderer/src/components/im/: MessageRow.vue  MessagesPane.vue  SessionDrawer.vue  types.ts
apps/renderer/src/controller/: client.ts  runtime.ts
apps/renderer/src/inspection/: probes.ts
apps/renderer/src/server/: client-proof.ts
apps/renderer/src/styles/: app.css  bootstrap.ts
apps/renderer/vite/: index.html  package.json  tsconfig.json  vite.config.ts
apps/renderer/vite/src/: App.vue  main.ts
apps/renderer/vite/src/agents/: AgentsSettings.vue  agentsModel.ts  client.ts  runtime.ts  useAgentsSettings.ts
apps/renderer/vite/src/components/: MessageCard.vue
apps/renderer/vite/src/components/im/: MessageRow.vue  MessagesPane.vue  SessionDrawer.vue  liveChatModel.ts  sessionModel.ts  types.ts
apps/renderer/vite/src/controller/: client.ts  runtime.ts
apps/renderer/vite/src/events/: eventbus.ts  rootEventbus.ts
apps/renderer/vite/src/inspection/: actions.ts  messagingState.ts  probes.ts
apps/renderer/vite/src/server/: agents.ts  client-proof.ts
apps/renderer/vite/src/styles/: bootstrap.ts
apps/tauri/: package.json
apps/tauri/scripts/: tauri.ts
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: agents_runtime.rs  controller_runtime.rs  lib.rs  main.rs  sidecar_runtime.rs
apps/tauri/src-tauri/src/inspection/: inspect.rs  mod.rs  renderer_action.rs  renderer_probe.rs  request_handler.rs  screenshot.rs
apps/tauri/src-tauri/tests/: inspection.rs
crates/platform/src/: paths.rs  process.rs
crates/shared/: Cargo.toml
crates/shared/src/: control_plane.rs  delivery.rs  inspection.rs  lib.rs  message_operation.rs  paths.rs
crates/shared/tests/: control_plane.rs  delivery.rs  message_operation.rs  paths.rs
crates/sidecar/src/: identity.rs  inspect.rs  layout.rs  process.rs  ready.rs  stamp.rs
crates/stim-dev-cli/: Cargo.toml
crates/stim-dev-cli/src/: main.rs
docs/: README.md
docs/architecture/: overview.md  structure.md
docs/architecture/desktop/: tauri-boundary.md
docs/architecture/layers/: principles.md
docs/architecture/product/: message-card-boundary.md  workspace-boundary.md
docs/operations/: documentation.md
tools/stim-dev/: Cargo.toml
tools/stim-dev/src/: acceptance.rs  bridge.rs  cli.rs  detect.rs  dev_loop.rs  main.rs  runtime_control.rs  sidecars.rs  smoke.rs
tools/stim-dev/src/acceptance/: mod.rs
tools/stim-dev/src/acceptance/controller/: assertions.rs  mod.rs  operation_socket.rs
tools/stim-dev/src/chat/: mod.rs
tools/stim-dev/src/control/: agents.rs  inspect.rs  lifecycle.rs  mod.rs  namespace.rs  output.rs  processes.rs
tools/stim-dev/src/detect/: hints.rs  http.rs  mod.rs  probes.rs  services.rs
tools/stim-dev/src/shared/: clock.rs  mod.rs
tools/stim-dev/src/shared/bridge/: exchange.rs  mod.rs
tools/stim-dev/src/sidecars/: bridge_file.rs  mod.rs  spawn.rs  stamp.rs
tools/stim-dev/src/smoke/: assertions.rs  mod.rs  renderer.rs
tools/stim-dev/tests/: unit.rs
tools/stim-dev/tests/unit/: acceptance.rs  chat.rs  cli.rs  control.rs  detect.rs  shared.rs  smoke.rs
tools/stim-guard/: Cargo.toml
tools/stim-guard/src/: cli.rs  config.rs  main.rs  model.rs  output.rs  path_match.rs  rust_tests.rs  scan.rs
tools/stim-guard/src/naming/: mod.rs  rust.rs  ts.rs
tools/stim-guard/tests/: unit.rs
tools/stim-guard/tests/unit/: cli.rs  model.rs  naming.rs  output.rs  path_match.rs  scan.rs
(+2 files in other folders)
