[workspace]
members = [
  "apps/agents",
  "apps/packaged",
  "apps/renderer",
  "apps/tauri/src-tauri",
  "apps/controller",
  "crates/shared",
  "tools/stim-dev"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
stim-platform = { path = "../stim-crates/crates/platform" }
stim-sidecar = { path = "../stim-crates/crates/sidecar" }
stim-shared = { path = "crates/shared" }
