[package]
name = "stim-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stim-proto = { path = "../../../stim-proto/crates/stim-proto" }
stim-platform.workspace = true
stim-sidecar.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
