[package]
name = "stim-controller"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
stim-shared.workspace = true
stim-proto = { path = "../../../stim-proto/crates/stim-proto" }
tokio = { version = "1", features = ["rt-multi-thread", "net"] }

[dev-dependencies]
stim-server = { path = "../../../stim-server" }
