[package]
name = "stim-dev"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
stim-platform.workspace = true
stim-sidecar.workspace = true
stim-shared.workspace = true
serde = "1"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tungstenite = "0.29"
