[package]
name = "stim-guard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_common = "21.0.1"
swc_ecma_ast = "23.0.0"
swc_ecma_parser = "39.0.2"
swc_ecma_visit = "23.0.0"
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
