[package]
name = "stim-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "stim_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
stim-shared.workspace = true
tauri = { version = "2.0", features = [] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"
